--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^5.0.0-beta2",
+    "firebase": "^8.3.1",
+    "framer-motion": "^4.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
+    "react-countdown": "^2.3.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.3"
   },
